--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ rust-version = "1.77"
 edition = "2021"
 
 [workspace.dependencies]
-n2 = { git = "ssh://git@github.com/moonbitlang/n2.git", rev = "564547ca9ad21dbf8eb791cb929213ffcac6314c" }
+n2 = { git = "https://github.com/moonbitlang/n2.git", rev = "564547ca9ad21dbf8eb791cb929213ffcac6314c" }
 moonbuild = { path = "./crates/moonbuild", version = "*" }
 mooncake = { path = "./crates/mooncake", version = "*" }
 moonutil = { path = "./crates/moonutil", version = "*" }
@@ -23,23 +23,23 @@ futures = { version = "0.3.29", features = ["std"], default-features = false }
 indexmap = { version = "2.2.6", features = ["serde"] }
 notify = "6.1.1"
 reqwest = { version = "0.11.22", features = [
-    "multipart",
-    "blocking",
-    "json",
-    "stream",
+  "multipart",
+  "blocking",
+  "json",
+  "stream",
 ] }
 petgraph = { version = "0.6.4", features = [
-    "graphmap",
+  "graphmap",
 ], default-features = false }
 serde = { version = "1.0.163", features = ["derive"] }
 serde_json = { version = "1.0.97", features = ["preserve_order"] }
 serde_json_lenient = { version = "0.2.1", features = ["preserve_order"] }
 sysinfo = "0.29.9"
 tokio = { version = "1.34.0", features = [
-    "rt-multi-thread",
-    "macros",
-    "signal",
-    "process",
+  "rt-multi-thread",
+  "macros",
+  "signal",
+  "process",
 ] }
 walkdir = "2.5.0"
 which = "6.0.1"
@@ -48,8 +48,8 @@ home = "0.5.0"
 semver = { version = "1.0.22", features = ["serde"] }
 sha2 = "0.10.8"
 chrono = { version = "0.4.31", features = [
-    "clock",
-    "std",
+  "clock",
+  "std",
 ], default-features = false }
 hyper = "1.3.1"
 hyper-util = { version = "0.1.3", features = ["http1", "server", "tokio"] }
@@ -57,7 +57,7 @@ hyper-staticfile = "0.10.0"
 http = "1.1.0"
 bytes = "1.6"
 dialoguer = { version = "0.11.0", features = [
-    "password",
+  "password",
 ], default-features = false }
 regex = { version = "1.10.4", default-features = false }
 self-replace = "1.3.7"
