--- a/licenserc.toml
+++ b/licenserc.toml
@@ -1,5 +1,11 @@
 baseDir = "."
 
-inlineHeader = ""
+inlineHeader = """
+"""
 
-excludes = ["*.mbti"]
+excludes = [
+    "*.mbti",
+    "crates/moon/tests/test_cases/**",
+    "!crates/moon/tests/test_cases/mod.rs",
+    "crates/moonbuild/template/**",
+]
