--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -133,6 +133,9 @@ jobs:
         if: ${{ matrix.os == 'windows-latest' }}
         run: cargo run --bin moon bundle --source-dir "$env:USERPROFILE\.moon\lib\core" --all
 
+      - name: Run tests
+        run: cargo test
+
       - name: Test core (Unix)
         if: ${{ matrix.os != 'windows-latest' }}
         run: |
@@ -142,6 +145,9 @@ jobs:
           cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target wasm-gc
           cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target js
           cargo run --bin moon test --source-dir ~/.moon/lib/core --release --target wasm
+          cargo run --bin moon test --source-dir ~/.moon/lib/core --enable-coverage --target wasm-gc
+          cargo run --bin moon test --source-dir ~/.moon/lib/core --enable-coverage --target js
+          cargo run --bin moon test --source-dir ~/.moon/lib/core --enable-coverage --target wasm
       - name: Test core (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
@@ -151,9 +157,9 @@ jobs:
           cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --release --target wasm-gc
           cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --release --target js
           cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --release --target wasm
-
-      - name: Run tests
-        run: cargo test
+          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --enable-coverage --target wasm-gc
+          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --enable-coverage --target js
+          cargo run --bin moon test --source-dir "$env:USERPROFILE\.moon\lib\core" --enable-coverage --target wasm
 
   coverage:
     needs: test
