FEAT: Shell Completion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ thiserror = "1.0"
 test-log = "0.2"
 fs4 = { version = "0.8.3", features = ["sync"] }
 ariadne = { version = "0.4.1", features = ["auto-color"] }
+clap_complete = { version = "4.5.4" }
 
 [profile.release]
 debug = false
