--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -49,6 +49,7 @@ log.workspace = true
 walkdir.workspace = true
 tokio.workspace = true
 futures.workspace = true
+clap_complete.workspace = true
 
 [target.'cfg(not(windows))'.dependencies]
 openssl = { version = "0.10.66", features = ["vendored"] }
