--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -214,6 +214,7 @@ jobs:
         run: cargo tarpaulin --ignore-tests --out Xml
 
       - name: Upload coverage reports to Codecov
+        if: github.ref == 'refs/heads/main'
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{secrets.CODECOV_TOKEN}}
