--- a/crates/mooncake/Cargo.toml
+++ b/crates/mooncake/Cargo.toml
@@ -45,6 +45,7 @@ form_urlencoded = "1.2.1"
 indexmap.workspace = true
 petgraph.workspace = true
 thiserror.workspace = true
+dunce.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
