--- a/.github/workflows/test-on-main.yml
+++ b/.github/workflows/test-on-main.yml
@@ -61,35 +61,23 @@ jobs:
       - name: install MoonBit(Unix)
         if: ${{ matrix.os != 'windows-latest' }}
         run: |
-          mkdir -p ~/.moon/bin
-          mkdir -p ~/.moon/lib
-          git clone --depth 1 https://github.com/moonbitlang/core.git ~/.moon/lib/core
-          mooncVersion=$(cat moonc-version | cut -c 1-9)
-          echo "$mooncVersion"
-          bins=('moonc' 'mooninfo' 'moonfmt')
-          for bin in "${bins[@]}"; do
-              rclone copy "aws:${{ secrets.AWS_BUCKET_NAME }}/bleeding-moonc/$mooncVersion/$(uname -s)-$(uname -m)/$bin" ~/.moon/bin/
-              chmod +x ~/.moon/bin/"$bin"
-          done
-          moonrunVersion=4bb74ba5f
-          rclone copy "aws:${{ secrets.AWS_BUCKET_NAME }}/bleeding-moonrun/$moonrunVersion/$(uname -s)-$(uname -m)/moonrun" ~/.moon/bin/
-          chmod +x ~/.moon/bin/moonrun
+          curl -fsSL https://cli.moonbitlang.com/install/unix.sh | bash
+          curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m).tar.gz --output moonbit.tar.gz
+          tar xf moonbit.tar.gz --directory ~/.moon/bin/
+          chmod +x ~/.moon/bin/moon*
+          rm -rf ~/.moon/lib/core && git clone --depth 1 https://github.com/moonbitlang/core.git ~/.moon/lib/core
           echo "$HOME/.moon/bin" >> $GITHUB_PATH
 
       - name: install MoonBit(Windows)
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          New-Item -Path "$env:USERPROFILE" -Name ".moon" -ItemType "directory"
-          New-Item -Path "$env:USERPROFILE\.moon" -Name "lib" -ItemType "directory"
-          New-Item -Path "$env:USERPROFILE\.moon" -Name "bin" -ItemType "directory"
-          $mooncVersion = (Get-Content moonc-version -First 1).Substring(0, 9)
-          $bins = @("moonc.exe", "mooninfo.exe", "moonfmt.exe")
-          foreach ($bin in $bins) {
-              rclone copy "aws:${{ secrets.AWS_BUCKET_NAME }}/bleeding-moonc/$mooncVersion/Windows-x86_64/$bin" "$env:USERPROFILE\.moon\bin\"
-          }
-          $moonrunVersion = "4bb74ba5f"
-          rclone copy "aws:${{ secrets.AWS_BUCKET_NAME }}/bleeding-moonrun/$moonrunVersion/Windows-x86_64/moonrun.exe" "$env:USERPROFILE\.moon\bin\"
-          git clone --depth 1 https://github.com/moonbitlang/core.git "$env:USERPROFILE\.moon\lib\core"
+          irm https://cli.moonbitlang.com/install/powershell.ps1 | iex
+          Invoke-WebRequest -Uri https://cli.moonbitlang.com/moon-ci/Windows-x86_64.zip -OutFile moonbit.zip
+          New-Item -ItemType Directory -Force -Path "$env:USERPROFILE/.moon/bin"
+          New-Item -ItemType Directory -Force -Path "$env:USERPROFILE/.moon/lib"
+          Expand-Archive -Path "moonbit.zip" -DestinationPath "$env:USERPROFILE/.moon/bin/" -Force
+          Remove-Item -Recurse -Force -Path "$HOME/.moon/lib/core"
+          git clone --depth 1 https://github.com/moonbitlang/core.git "$env:USERPROFILE/.moon/lib/core"
           "$env:USERPROFILE\.moon\bin" | Out-File -FilePath $env:GITHUB_PATH -Append
 
       - name: Build
