--- a/crates/moonutil/Cargo.toml
+++ b/crates/moonutil/Cargo.toml
@@ -43,6 +43,8 @@ ariadne.workspace = true
 env_logger.workspace = true
 log.workspace = true
 thiserror.workspace = true
+schemars.workspace = true
+expect-test.workspace = true
 
 [dev-dependencies]
 expect-test.workspace = true
