--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -44,3 +44,5 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_branch: gh-pages
         publish_dir: ./docs/manual/book
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
