ci: use actions-mdbook

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,25 +95,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-  
-      - name: Cache cargo registry
-        uses: actions/cache@v4
+
+      - name: Setup mdBook
+        uses: peaceiris/actions-mdbook@v2
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-registry-
-  
-      - name: Cache cargo build
-        uses: actions/cache@v4
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-target-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-target-
-  
-      - name: Install mdBook
-        run: cargo install mdbook
+          mdbook-version: 'latest'
   
       - name: Build and Check mdBook
         run: mdbook build docs/manual
