--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,25 +32,10 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Cache cargo registry
-      uses: actions/cache@v4
+    - name: Setup mdBook
+      uses: peaceiris/actions-mdbook@v2
       with:
-        path: ~/.cargo/registry
-        key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-registry-
-    
-    - name: Cache cargo build
-      uses: actions/cache@v4
-      with:
-        path: target
-        key: ${{ runner.os }}-cargo-target-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-target-
-  
-    - name: Install mdBook
-      run: cargo install mdbook
-
+        mdbook-version: 'latest'
     - name: Build the book
       run: mdbook build docs/manual
 
