--- a/licenserc.toml
+++ b/licenserc.toml
@@ -43,4 +43,6 @@ excludes = [
     "crates/moon/tests/test_cases/**",
     "!crates/moon/tests/test_cases/mod.rs",
     "crates/moonbuild/template/**",
+    ".justfile",
+    "moon.test",
 ]
