--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ mooncake = { path = "./crates/mooncake", version = "*" }
 moonutil = { path = "./crates/moonutil", version = "*" }
 anyhow = { version = "1.0.86" }
 bincode = "1.3.3"
-clap = { version = "4.5.4", features = ["derive"] }
+clap = { version = "4.5.4", features = ["derive", "string"] }
 colored = "2.1.0"
 ctrlc = { version = "3.4.4", features = ["termination"] }
 dunce = "1.0.4"
