--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -62,31 +62,14 @@ jobs:
           rclone copyto -L .\target\release\moonrun.exe "aws:${{ secrets.AWS_BUCKET_NAME }}/bleeding-moonrun/$version/Windows-x86_64/moonrun.exe"
           rclone copyto -L .\target\release\moonrun.exe "aws:cli.moonbitlang.com/moon-ci/Windows-x86_64/moonrun.exe"
 
-      - name: Checkout moonc-version (macos-latest)
-        if: ${{ matrix.os == 'macos-latest' }}
-        uses: actions/checkout@v4
-        with:
-          ref: moonc-version-dont-delete
-          path: moonc-version-dont-delete
-
-      - name: Copy moonc-version file to workspace (macos-latest)
-        if: ${{ matrix.os == 'macos-latest' }}
-        run: |
-          cp moonc-version-dont-delete/moonc-version .
-
       - name: Bleeding Release (macos-latest)
         if: ${{ matrix.os == 'macos-latest' }}
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
         run: |
           rm -rf tmp-bins
           mkdir tmp-bins
-          mooncVersion=$(cat moonc-version | cut -c 1-9)
-          rclone copy "aws:${{ secrets.AWS_BUCKET_NAME }}/bleeding-moonc/$mooncVersion/$(uname -s)-$(uname -m)/" ./tmp-bins/
-          moonrunVersion=4bb74ba5f
-          rclone copy "aws:${{ secrets.AWS_BUCKET_NAME }}/bleeding-moonrun/$moonrunVersion/$(uname -s)-$(uname -m)/moonrun" ./tmp-bins/
+          curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m).tar.gz --output moonbit.tar.gz
+          tar xf moonbit.tar.gz --directory ./tmp-bins/
+          cp -L ./target/release/moonrun ./tmp-bins/
           cp -L ./target/release/moon ./tmp-bins/
           pushd tmp-bins && shasum -a 256 -- * >../moonbit-darwin-aarch64.sha256 && popd
           tar czf ./moonbit-darwin-aarch64.tar.gz --directory=./tmp-bins .
