--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -37,7 +37,11 @@ jobs:
       with:
         mdbook-version: 'latest'
     - name: Build the book
-      run: mdbook build docs/manual
+      run: |
+        mdbook build docs/manual
+        mdbook build docs/manual-zh
+        mkdir -p docs/manual/book/zh
+        cp -r docs/manual-zh/book/* docs/manual/book/zh
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
