--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -124,7 +124,7 @@ jobs:
         run: |
           curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
           unzip awscliv2.zip
-          sudo ./aws/install
+          bash ./aws/install
 
       - name: Upload
         env:
