--- a/crates/moon/Cargo.toml
+++ b/crates/moon/Cargo.toml
@@ -59,6 +59,7 @@ openssl = { version = "0.10.66", features = ["vendored"] }
 tempfile = "3.6.0"
 snapbox = "0.4.15"
 expect-test.workspace = true
+clap-markdown = "0.1.4"
 
 [[bin]]
 name = "moon"
