--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -91,7 +91,7 @@ jobs:
     steps:
       - name: Install dependencies
         run: |
-          apt update && apt install -y software-properties-common curl unzip build-essential git sudo sha256sum
+          apt update && apt install -y software-properties-common curl unzip build-essential git sudo coreutils
 
       - name: Checkout
         run: |
