--- a/.github/workflows/bleeding-release.yml
+++ b/.github/workflows/bleeding-release.yml
@@ -46,14 +46,16 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
         run: |
+          PLATFORM=$(uname -s | tr '[:upper:]' '[:lower:]')-$(uname -m | tr '[:upper:]' '[:lower:]')
+          echo "PLATFORM=$PLATFORM" >> $GITHUB_ENV
           rm -rf tmp-bins
           mkdir tmp-bins
           curl https://cli.moonbitlang.com/moon-ci/$(uname -s)-$(uname -m).tar.gz --output moonbit.tar.gz
           tar xf moonbit.tar.gz --directory ./tmp-bins/
           cp -L ./target/release/moonrun ./tmp-bins/
           cp -L ./target/release/moon ./tmp-bins/
-          pushd tmp-bins && shasum -a 256 -- * >../moonbit-$(uname -s)-$(uname -m).sha256 && popd
-          tar czf ./moonbit-$(uname -s)-$(uname -m).tar.gz --directory=./tmp-bins .
-          aws s3 cp ./moonbit-$(uname -s)-$(uname -m).tar.gz s3://cli.moonbitlang.com/binaries/bleeding/moonbit-$(uname -s)-$(uname -m).tar.gz
-          aws s3 cp ./moonbit-$(uname -s)-$(uname -m).sha256 s3://cli.moonbitlang.com/binaries/bleeding/moonbit-$(uname -s)-$(uname -m).sha256
+          pushd tmp-bins && shasum -a 256 -- * >../moonbit-$PLATFORM.sha256 && popd
+          tar czf ./moonbit-$PLATFORM.tar.gz --directory=./tmp-bins .
+          aws s3 cp ./moonbit-$PLATFORM.tar.gz s3://cli.moonbitlang.com/binaries/bleeding/moonbit-$PLATFORM.tar.gz
+          aws s3 cp ./moonbit-$PLATFORM.sha256 s3://cli.moonbitlang.com/binaries/bleeding/moonbit-$PLATFORM.sha256
           aws cloudfront create-invalidation --distribution-id E1KQYZEVEB0TAY --paths "/*"
